# vibe-coding-app-baseline-rigorous-ship

./: .gitignore  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  PHASE2_SECURE_README.md  README.md  TEST_PR.md  answers.ci.json  main.js  package-lock.json  package.json
.cursor/: rules
.githooks/: pre-commit
.github/: CODEOWNERS
.github/workflows/: ship-deliverable.yml
cli/: deliverable-builder.js  vibe-cli.js
configs/: agent-net-allowlist.json
docs/ops/: observability.md
docs/security/: agent-runtime.md
outputs/: generated-deliverable.html  generated-deliverable.md  manifest.json
phase2_ci_quality_secure_agents_extended/: answers.enterprise.ci.json
phase2_ci_quality_secure_agents_extended/.githooks/: pre-commit
phase2_ci_quality_secure_agents_extended/.github/: CODEOWNERS
phase2_ci_quality_secure_agents_extended/.github/workflows/: ship-deliverable.yml
phase2_ci_quality_secure_agents_extended/configs/: policy-overrides.json
phase2_ci_quality_secure_agents_extended/docs/contrib/: pre-commit.md
phase2_ci_quality_secure_agents_extended/scripts/: net-allowlist-ui.js  verify-artifacts.js
prompts/: SYSTEM.md  TASK.md
questionnaire/: answers.schema.json  context-questions.json
rules/: rules.json
scripts/: ci-selfcheck.js  export-github.js  export-html.js  export-local.js  export-notion.js  export-pdf.js  performance-profile.js  ship.js  validate-answers.js  verify-agent-policy.js  verify-artifacts.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
templates/: report_expert.md  report_novice.md
tests/: e2e.ship.test.mjs
(+3 files in other folders)
