[package]
name = "vibe-coding-app-desktop"
version = "0.2.0"
description = "Vibe Coding App - Enterprise Secure Desktop"
authors = ["Nicolas K. Perkins <nicolas.kperkins@gmail.com>"]
license = "MIT"
repository = ""
edition = "2021"


[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
